<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">智能考勤</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="left_bottom_title_1">日常接送人 </string>
    <string name="left_bottom_title_2">请家长配合使用家长客户端自主设置</string>
    <string name="left_bottom_title_3">Parents can upload portraits on the Cloud Schoolbus APP</string>
    
    <string name="avd_1">云中校车智能掌上考勤机!</string>
    <string name="avd_2">Thank you for taking Cloud SchoolBus!</string>
    
    <string name="cought">咳嗽</string>
    <string name="cought_en">Cought</string>
    <string name="fever">发热</string>
    <string name="fever_en">Fever</string>
    <string name="sore">咽痛</string>
    <string name="sore_en">Sore</string>
    <string name="nose">流涕</string>
    <string name="nose_en">Nose</string>
    <string name="herpes">疱疹</string>
    <string name="herpes_en">Herpes</string>
    <string name="diarrhea">腹泻</string>
    <string name="diarrhea_en">Diarrhea</string>
    <string name="red_eye">红眼</string>
    <string name="red_eye_en">Red Eye</string>
    <string name="drug">需吃药</string>
    <string name="drug_en">Drug</string>
    
    <string name="taost_press_again">再按一次退出程序</string>
    <string name="taost_press_again_en">Press it again to exit the program</string>
    <string name="taost_check_network">请检查网络是否连接</string>
    <string name="taost_check_network_en">Please check whether the network is connected</string>
    
    <string name="connect_failed">连接不到服务器，请检查您的网络!</string>
	<string name="connect_timeout">连接服务器超时,请重试！</string>
	<string name="server_error">加载数据失败，请重试！</string>
	 <string name="connect_failed_en">Please check your network!</string>
    <string name="connect_timeout_en">Connecting failed, please try again!</string>
    <string name="server_error_en">Loading data failed, please try again!</string>
    
    <string name="error">Error</string>
    <string name="no_nfc">No NFC found on this device</string>
    <string name="nfc_disabled">NFC is not enabled. Please go to the wireless settings to enable it.</string>
    <string name="setting_dialog">设置</string>
    <string name="shutdowntime">定时开关机</string>
    <string name="poweron">定时开机</string>
    <string name="poweroff">定时关机</string>
    <string name="softwareupdate">新版本升级 </string>
    <string name="syncronizedata">同步考勤卡信息 </string>
    <string name="loading123">加载中...</string>
    
    
</resources>
