<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/textView_title"
        style="@style/style_dialog_setting_title"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/setting_dialog" />

    <View
        android:id="@+id/view4"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/textView_title"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:background="@color/line" />

    <TextView
        android:id="@+id/textView_swtich"
        style="@style/style_dialog_setting_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view4"
        android:layout_marginLeft="20dp"
        android:gravity="center_vertical"
        android:text="@string/shutdowntime" />

    <View
        android:id="@+id/view6"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@id/textView_swtich"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:background="@color/line" />

    <RelativeLayout
        android:id="@+id/relativeLayout4"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/view6"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:background="@drawable/item_choosed"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView21"
            style="@style/style_dialog_setting_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/poweron" />

        <TextView
            android:id="@+id/textView_start"
            style="@style/style_dialog_setting_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="450dp"
            android:text="06:00" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="30dp"
            android:src="@drawable/go" />
    </RelativeLayout>

    <View
        android:id="@+id/view7"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@id/relativeLayout4"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:background="@color/line" />

    <RelativeLayout
        android:id="@+id/relativeLayout5"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/view7"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:background="@drawable/item_choosed"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView22"
            style="@style/style_dialog_setting_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/poweroff" />

        <TextView
            android:id="@+id/textView_shutdown"
            android:layout_width="wrap_content"
            android:layout_marginLeft="450dp"
            android:layout_height="wrap_content"
            style="@style/style_dialog_setting_status"
            android:layout_centerVertical="true"
            android:text="18:00" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="30dp"
            android:src="@drawable/go" />
    </RelativeLayout>

    <View
        android:id="@+id/view8"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@id/relativeLayout5"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:background="@color/line" />

    <TextView
        android:id="@+id/textView_update"
        style="@style/style_dialog_setting_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/view8"
        android:layout_marginLeft="20dp"
        android:gravity="center_vertical"
        android:text="@string/softwareupdate" />

    <View
        android:id="@+id/view9"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@id/textView_update"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:background="@color/line" />

    <RelativeLayout
        android:id="@+id/relativeLayout6"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/view9"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:background="@drawable/item_choosed"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView31"
            style="@style/style_dialog_setting_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:layout_centerVertical="true"
            android:text="@string/softwareupdate" />

        <ImageView
            android:id="@+id/imageView_update_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/textView31"
            android:src="@drawable/apk_tip" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="30dp"
            android:src="@drawable/go" />
    </RelativeLayout>
 
    <!-- Manually to sync the database -->
        <View
        android:id="@+id/view10"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/relativeLayout6"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:background="@color/line" />

    <TextView
        android:id="@+id/textView_sync_db"
        style="@style/style_dialog_setting_title"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/view10"
        android:text="@string/syncronizedata" />
    
    <View
        android:id="@+id/view11"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@id/textView_sync_db"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:background="@color/line" />

    <RelativeLayout
        android:id="@+id/relativeLayout7"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/view11"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:background="@drawable/item_choosed"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView32"
            style="@style/style_dialog_setting_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:layout_centerVertical="true"
            android:text="@string/syncronizedata" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="30dp"
            android:src="@drawable/go" />
    </RelativeLayout>

    <LinearLayout
            android:id="@+id/linearLayout_loading"
            android:layout_width="210dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="#e0000000"
            android:gravity="center" >

            <ProgressBar
                android:id="@+id/progressBar_center"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading123"
                android:textColor="@color/text_white"
                android:textSize="20sp" />
        </LinearLayout>

</RelativeLayout>